# advent-of-code

./: .bazelignore  .bazelrc  .gitignore  MODULE.bazel  devbox.json  workspace_status.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: main.yaml
common/: BUILD
common/src/main/scala/adventofcode/common/: Name.scala
day1/: BUILD
day1/src/main/scala/adventofcode/day1/: Main.scala
